Fix visual hierarchy: proper background/text colors, immediate program visibility, working scroll

--- a/program.html
+++ b/program.html
@@ -18,21 +18,23 @@
                 <img id="club-logo" src="images/AAC Logo.png" alt="Apex Athletic Club Logo">
             </a>
         </div>
-    </div>
-    <div class="program-content">
-        <div id="welcome-message" class="centered">
+        
+        <!-- Welcome section on dark background -->
+        <div id="welcome-section">
             <h2>Welcome to Apex Athletic Club</h2>
             <h4>A Talent Factory for Promising Individuals</h4>
             <button id="learn-more">LEARN MORE</button>
         </div>
-        
+    </div>
+
+    <!-- Program content on white background -->
+    <div class="program-content">
         <div id="program-details">
-            <p>Apex Athletic Club is an invite-only collective...</p>
-            <h3>Build Your Program</h3>
             <div class="sport-selection">
+                <!-- Sport options with descriptions -->
                 <label>
                     <input type="checkbox" name="sports" value="indoor-soccer">
-                    Indoor Soccer/Futsal
+                    <span class="sport-title">Indoor Soccer/Futsal</span>
                     <div class="sport-description">
                         Develop quick decision-making and technical skills in confined spaces
                     </div>
