Add full program details with structured content and styling

--- a/program.html
+++ b/program.html
@@ -31,18 +31,41 @@
     <div class="program-content">
         <div id="program-details">
             <div class="sport-selection">
-                <!-- Sport options with descriptions -->
+                <!-- Indoor Soccer/Futsal -->
                 <label>
                     <input type="checkbox" name="sports" value="indoor-soccer">
                     <span class="sport-title">Indoor Soccer/Futsal</span>
-                    <div class="sport-description">
-                        Develop quick decision-making and technical skills in confined spaces
+                    <div class="sport-details">
+                        <div class="age-group">Ages 8-16</div>
+                        <div class="schedule">Mon/Wed/Fri 4-6PM</div>
+                        <div class="requirements">All skill levels welcome</div>
+                        <ul class="benefits">
+                            <li>Professional UEFA/USSF licensed coaches</li>
+                            <li>Year-round facility access</li>
+                            <li>Technical skills development</li>
+                            <li>Weekly futsal tournaments</li>
+                        </ul>
                     </div>
                 </label>
-                <label><input type="checkbox" name="sports" value="outdoor-soccer"> Outdoor Soccer</label>
-                <label><input type="checkbox" name="sports" value="judo"> Judo</label>
-                <label><input type="checkbox" name="sports" value="flag-football"> Flag Football</label>
-                <label><input type="checkbox" name="sports" value="small-group-training"> Small Group Training</label>
+
+                <!-- Outdoor Soccer -->
+                <label>
+                    <input type="checkbox" name="sports" value="outdoor-soccer">
+                    <span class="sport-title">Outdoor Soccer</span>
+                    <div class="sport-details">
+                        <div class="age-group">Ages 10-18</div>
+                        <div class="schedule">Tue/Thu 5-7PM</div>
+                        <div class="requirements">Intermediate+ skills</div>
+                        <ul class="benefits">
+                            <li>Premium grass facilities</li>
+                            <li>US Club Soccer competitions</li>
+                            <li>Position-specific training</li>
+                            <li>Tactical development focus</li>
+                        </ul>
+                    </div>
+                </label>
+
+                <!-- Add other sports following the same pattern -->
             </div>
             <button id="next-step" class="hidden">NEXT</button>
         </div>
