Nuclear visibility option: forced black text on white background

--- a/program.html
+++ b/program.html
@@ -28,7 +28,7 @@
     </div>
 
     <!-- Program content on white background -->
-    <div class="program-content">
+    <div class="program-content" style="background:white;color:black">
         <div id="program-details">
             <div class="sport-selection">
                 <!-- Indoor Soccer/Futsal -->
