Enhance program descriptions: blend about page insights with existing details

--- a/program.html
+++ b/program.html
@@ -43,8 +43,9 @@
                     <ul>
                         <li>Professional UEFA/USSF licensed coaches</li>
                         <li>Year-round facility access</li>
-                        <li>Technical skills development</li>
-                        <li>Weekly futsal tournaments</li>
+                        <li>Focus on technical skills and fast-paced decision making</li>
+                        <li>Small-sided games and futsal tournaments</li>
+                        <li>Perfect for developing close control and creativity</li>
                     </ul>
                 </div>
             </div>
@@ -60,10 +61,11 @@
                     <div class="schedule">Tue/Thu 5-7PM</div>
                     <div class="requirements">Intermediate+ skills</div>
                     <ul>
-                        <li>Premium grass facilities</li>
-                        <li>US Club Soccer competitions</li>
+                        <li>Training at premium grass facilities</li>
+                        <li>Emphasis on tactical understanding and game intelligence</li>
+                        <li>Competitive matches through US Club Soccer</li>
                         <li>Position-specific training</li>
-                        <li>Tactical development focus</li>
+                        <li>Focus on building complete players</li>
                     </ul>
                 </div>
             </div>
