Ensure visibility of logo and welcome section on program page

--- a/program.html
+++ b/program.html
@@ -131,6 +131,7 @@
             </div>
         </div>
         <button id="next-step">NEXT</button>
+        <!-- Back button will be added dynamically -->
     </div>
     <script src="program.js"></script>
 </body>
