Enhance program page: bold text, update button styles, verify locations

--- a/program.html
+++ b/program.html
@@ -23,7 +23,7 @@
         <div id="welcome-section">
             <h2>Welcome to Apex Athletic Club</h2>
             <h4>A Talent Factory for Promising Individuals</h4>
-            <button id="learn-more" style="background: rgba(255, 255, 255, 0.3); color: white;">LEARN MORE</button>
+            <button id="learn-more" class="cta-button">LEARN MORE</button>
         </div>
     </div>
 
@@ -37,11 +37,11 @@
                     <span class="sport-title">Indoor Soccer/Futsal</span>
                 </div>
                 <div class="sport-details">
-                    <div class="timeline">October - February and May - August</div>
-                    <div class="age-group">2010s and younger</div>
-                    <div class="schedule">Mon/Wed/Fri 4-6PM</div>
-                    <div class="coaches">Professional, licensed coaches</div>
-                    <div class="location">Location: Apex Indoor Arena, 123 Soccer Lane</div>
+                    <div class="timeline"><strong>October - February and May - August</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Mon/Wed/Fri 4-6PM</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <div class="location"><strong>Location: Apex Indoor Arena, 123 Soccer Lane</strong></div>
                     <ul>
                         <li>Focus on technical skills and fast-paced decision making</li>
                         <li>Small-sided games and futsal tournaments</li>
@@ -57,11 +57,11 @@
                     <span class="sport-title">Outdoor Soccer</span>
                 </div>
                 <div class="sport-details">
-                    <div class="timeline">March - May and August - October</div>
-                    <div class="age-group">2010s and younger</div>
-                    <div class="schedule">Tue/Thu 5-7PM</div>
-                    <div class="coaches">Professional, licensed coaches</div>
-                    <div class="location">Location: Apex Outdoor Fields, 456 Grass Blvd</div>
+                    <div class="timeline"><strong>March - May and August - October</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Tue/Thu 5-7PM</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <div class="location"><strong>Location: Apex Outdoor Fields, 456 Grass Blvd</strong></div>
                     <ul>
                         <li>Emphasis on tactical understanding and game intelligence</li>
                         <li>Competitive matches through US Club Soccer</li>
@@ -78,11 +78,11 @@
                     <span class="sport-title">Small Group Training</span>
                 </div>
                 <div class="sport-details">
-                    <div class="timeline">Year-round</div>
-                    <div class="age-group">2010s and younger</div>
-                    <div class="schedule">Flexible scheduling</div>
-                    <div class="coaches">Professional, licensed coaches</div>
-                    <div class="location">Location: Apex Training Center, 789 Skill St</div>
+                    <div class="timeline"><strong>Year-round</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Flexible scheduling</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <div class="location"><strong>Location: Apex Training Center, 789 Skill St</strong></div>
                     <ul>
                         <li>Maximum 4 players per coach</li>
                         <li>Personalized attention and feedback</li>
@@ -100,11 +100,11 @@
                     <span class="sport-title">Judo</span>
                 </div>
                 <div class="sport-details">
-                    <div class="timeline">October - February and May - August</div>
-                    <div class="age-group">2010s and younger</div>
-                    <div class="schedule">Tue/Thu 6-8PM</div>
-                    <div class="coaches">Professional, licensed coaches</div>
-                    <div class="location">Location: Apex Martial Arts, 321 Judo Ave</div>
+                    <div class="timeline"><strong>October - February and May - August</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Tue/Thu 6-8PM</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <div class="location"><strong>Location: Apex Martial Arts, 321 Judo Ave</strong></div>
                     <ul>
                         <li>Led by experienced black belt instructors</li>
                         <li>Develops balance, coordination, and mental discipline</li>
@@ -122,11 +122,11 @@
                     <span class="sport-title">Flag Football</span>
                 </div>
                 <div class="sport-details">
-                    <div class="timeline">March - May and August - October</div>
-                    <div class="age-group">2010s and younger</div>
-                    <div class="schedule">Wed/Sat 4-6PM</div>
-                    <div class="coaches">Professional, licensed coaches</div>
-                    <div class="location">Location: Apex Sports Complex, 654 Flag Rd</div>
+                    <div class="timeline"><strong>March - May and August - October</strong></div>
+                    <div class="age-group"><strong>2010s and younger</strong></div>
+                    <div class="schedule"><strong>Wed/Sat 4-6PM</strong></div>
+                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
+                    <div class="location"><strong>Location: Apex Sports Complex, 654 Flag Rd</strong></div>
                     <ul>
                         <li>Non-contact skill development</li>
                         <li>Focus on agility and strategic thinking</li>
