Update program page with correct addresses for XLSW Apex and Cary Judo Club

--- a/program.html
+++ b/program.html
@@ -41,7 +41,7 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Mon/Wed/Fri 4-6PM</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Indoor Arena, 123 Soccer Lane</strong></div>
+                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
                     <ul>
                         <li>Focus on technical skills and fast-paced decision making</li>
                         <li>Small-sided games and futsal tournaments</li>
@@ -61,7 +61,7 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Tue/Thu 5-7PM</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Outdoor Fields, 456 Grass Blvd</strong></div>
+                    <div class="location"><strong>Location: Mills Park, 425 Mills Park Dr, Cary, NC 27519 and CM Herndon Park, 511 Scott King Rd, Durham, NC 27713</strong></div>
                     <ul>
                         <li>Emphasis on tactical understanding and game intelligence</li>
                         <li>Competitive matches through US Club Soccer</li>
@@ -82,7 +82,7 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Flexible scheduling</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Training Center, 789 Skill St</strong></div>
+                    <div class="location"><strong>Location: Apex Training Center, [Address]</strong></div>
                     <ul>
                         <li>Maximum 4 players per coach</li>
                         <li>Personalized attention and feedback</li>
@@ -104,7 +104,7 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Tue/Thu 6-8PM</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Martial Arts, 321 Judo Ave</strong></div>
+                    <div class="location"><strong>Location: Cary Judo Club, 5563 Western Blvd, Suite 12, Raleigh, NC 27606</strong></div>
                     <ul>
                         <li>Led by experienced black belt instructors</li>
                         <li>Develops balance, coordination, and mental discipline</li>
@@ -126,7 +126,7 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Wed/Sat 4-6PM</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Sports Complex, 654 Flag Rd</strong></div>
+                    <div class="location"><strong>Location: Apex Sports Complex, [Address]</strong></div>
                     <ul>
                         <li>Non-contact skill development</li>
                         <li>Focus on agility and strategic thinking</li>
