Update program page: adjust schedules, coach details, and locations based on about page

--- a/program.html
+++ b/program.html
@@ -39,14 +39,14 @@
                 <div class="sport-details">
                     <div class="timeline"><strong>October - February and May - August</strong></div>
                     <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Mon/Wed/Fri 4-6PM</strong></div>
-                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
+                    <div class="schedule"><strong>Mon/Tue/Sat/Sun Evenings</strong></div>
                     <ul>
+                        <li>Professional, licensed coaches</li>
                         <li>Focus on technical skills and fast-paced decision making</li>
                         <li>Small-sided games and futsal tournaments</li>
                         <li>Perfect for developing close control and creativity</li>
                     </ul>
+                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
                 </div>
             </div>
 
@@ -59,15 +59,15 @@
                 <div class="sport-details">
                     <div class="timeline"><strong>March - May and August - October</strong></div>
                     <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Tue/Thu 5-7PM</strong></div>
-                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Mills Park, 425 Mills Park Dr, Cary, NC 27519 and CM Herndon Park, 511 Scott King Rd, Durham, NC 27713</strong></div>
+                    <div class="schedule"><strong>Mon/Tue/Sat/Sun Evenings</strong></div>
                     <ul>
+                        <li>Professional, licensed coaches</li>
                         <li>Emphasis on tactical understanding and game intelligence</li>
                         <li>Competitive matches through US Club Soccer</li>
                         <li>Position-specific training</li>
                         <li>Focus on building complete players</li>
                     </ul>
+                    <div class="location"><strong>Location: Mills Park, 425 Mills Park Dr, Cary, NC 27519 and CM Herndon Park, 511 Scott King Rd, Durham, NC 27713</strong></div>
                 </div>
             </div>
 
@@ -81,15 +81,15 @@
                     <div class="timeline"><strong>Year-round</strong></div>
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Flexible scheduling</strong></div>
-                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Training Center, [Address]</strong></div>
                     <ul>
+                        <li>Professional, licensed coaches</li>
                         <li>Maximum 4 players per coach</li>
                         <li>Personalized attention and feedback</li>
                         <li>Focused skill development</li>
                         <li>Video analysis sessions</li>
                         <li>Custom training plans based on player needs</li>
                     </ul>
+                    <div class="location"><strong>Location: Apex Training Center, [Address]</strong></div>
                 </div>
             </div>
 
@@ -102,16 +102,16 @@
                 <div class="sport-details">
                     <div class="timeline"><strong>October - February and May - August</strong></div>
                     <div class="age-group"><strong>2010s and younger</strong></div>
-                    <div class="schedule"><strong>Tue/Thu 6-8PM</strong></div>
-                    <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Cary Judo Club, 5563 Western Blvd, Suite 12, Raleigh, NC 27606</strong></div>
+                    <div class="schedule"><strong>Wed/Fri 5PM</strong></div>
                     <ul>
+                        <li>Professional, licensed coaches</li>
                         <li>Led by experienced black belt instructors</li>
                         <li>Develops balance, coordination, and mental discipline</li>
                         <li>Competition opportunities through USA Judo</li>
                         <li>Perfect complement to soccer training</li>
                         <li>Builds confidence and self-defense skills</li>
                     </ul>
+                    <div class="location"><strong>Location: Cary Judo Club, 5563 Western Blvd, Suite 12, Raleigh, NC 27606</strong></div>
                 </div>
             </div>
 
@@ -126,7 +126,6 @@
                     <div class="age-group"><strong>2010s and younger</strong></div>
                     <div class="schedule"><strong>Wed/Sat 4-6PM</strong></div>
                     <div class="coaches"><strong>Professional, licensed coaches</strong></div>
-                    <div class="location"><strong>Location: Apex Sports Complex, [Address]</strong></div>
                     <ul>
                         <li>Non-contact skill development</li>
                         <li>Focus on agility and strategic thinking</li>
@@ -134,6 +133,7 @@
                         <li>Teaches field awareness and spatial recognition</li>
                         <li>Fun way to cross-train</li>
                     </ul>
+                    <div class="location"><strong>Location: Apex Sports Complex, [Address]</strong></div>
                 </div>
             </div>
         </div>
