Update program page: adjust locations and details for Flag Football and Small Group Training

--- a/program.html
+++ b/program.html
@@ -86,10 +86,9 @@
                         <li>Maximum 4 players per coach</li>
                         <li>Personalized attention and feedback</li>
                         <li>Focused skill development</li>
-                        <li>Video analysis sessions</li>
                         <li>Custom training plans based on player needs</li>
                     </ul>
-                    <div class="location"><strong>Location: Apex Training Center, [Address]</strong></div>
+                    <div class="location"><strong>Location: Hunter Street Park, Apex Nature Park, or XLSW Apex</strong></div>
                 </div>
             </div>
 
@@ -131,9 +130,10 @@
                         <li>Focus on agility and strategic thinking</li>
                         <li>Great for developing overall athleticism</li>
                         <li>Teaches field awareness and spatial recognition</li>
+                        <li>Enhances creative thinking for set pieces in soccer</li>
                         <li>Fun way to cross-train</li>
                     </ul>
-                    <div class="location"><strong>Location: Apex Sports Complex, [Address]</strong></div>
+                    <div class="location"><strong>Location: XLSW Apex, 1016 Investment Blvd</strong></div>
                 </div>
             </div>
         </div>
